[package]
name = "deberc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
derive_more = { version = "2.1.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.21.0"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v7", "serde"] }

[dev-dependencies]
serde_json = "1.0.150"
